objects/ChargentOrders__Chargent_AC_Configuration__c.object
<CustomObject>
    <description>Contains the Automated Collections Definitions.</description>
    <fields>
        <fullName>ChargentOrders__Controlling_Field__c</fullName>
        <description>This is the field on the Chargent Order record that controls whether this AC Process applies. This AC Process will only apply to Chargent Order records where the “AC Criteria” field’s value matches the “Value” entered in the configuration of this AC Process.</description>
        <inlineHelpText>This is the field on the Chargent Order record that controls whether this AC Process applies. This AC Process will only apply to Chargent Order records where the “AC Criteria” field’s value matches the “Value” entered in the configuration of this AC Process.</inlineHelpText>
        <label>Controlling Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Criteria__c</fullName>
        <description>Choose “All Chargent Orders” if you want this AC Process to apply to all Chargent Order records in your Org. Choose “Rule-based” if you wish to limit this AC Process to a specific criteria.</description>
        <inlineHelpText>Choose “All Chargent Orders” if you want this AC Process to apply to all Chargent Order records in your Org. Choose “Rule-based” if you wish to limit this AC Process to a specific criteria.</inlineHelpText>
        <label>Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Chargent Orders</fullName>
                </value>
                <value>
                    <fullName>Rule-based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This AC Process will run each day when enabled.</description>
        <inlineHelpText>This AC Process will run each day when enabled.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equals to</fullName>
                    <default>true</default>
                    <label>Equals to</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__PR_Page__c</fullName>
        <description>This field displays the name of the Payment Request Page used (if any) when this AC Process triggered. This should be pulled from the “Payment Request Page Name” field from the Payment Request Page.</description>
        <inlineHelpText>This field displays the name of the Payment Request Page used (if any) when this AC Process triggered. This should be pulled from the “Payment Request Page Name” field from the Payment Request Page.</inlineHelpText>
        <label>PR Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Process_Name__c</fullName>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Sender_Email_Address__c</fullName>
        <description>This is the email address that emails sent from this AC Process will come from.</description>
        <inlineHelpText>This is the email address that emails sent from this AC Process will come from.</inlineHelpText>
        <label>Sender Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Value__c</fullName>
        <description>When “Rule-based” is chosen from the “Criteria” picklist in the AC Configuration, this is the value that must be found in the “AC Criteria” field the Chargent Order record in order for this AC Process to apply.</description>
        <inlineHelpText>When “Rule-based” is chosen from the “Criteria” picklist in the AC Configuration, this is the value that must be found in the “AC Criteria” field the Chargent Order record in order for this AC Process to apply.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Chargent AC Configuration</label>
    <listViews>
        <fullName>ChargentOrders__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACC-{0000}</displayFormat>
        <label>Chargent AC Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chargent AC Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>